# qq-ai-bot

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
api/: router.py  schemas.py
deploy/: Dockerfile  docker-compose.yml
plugins/c2c_ai/: __init__.py
plugins/group_ai/: __init__.py  context.py
qq_bot/: __init__.py  client.py  events.py  gateway.py  intents.py  messages.py
services/: __init__.py  ai_router.py  claude_adapter.py  gemini_client.py  mcp_tools.py  openai_compat.py
