[project]
name = "qq-ai-bot"
version = "0.1.0"
description = "QQ official bot + AI API bridge service"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "certifi>=2024.0.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "anthropic>=0.30.0",
    "pydantic-settings>=2.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qq_bot*", "api*", "services*", "plugins*"]
